@@ -40,9 +40,34 @@
             <artifactId>log-shared</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.kaaproject.kaa.server.appenders.oracle-nosql</groupId>
+            <artifactId>config</artifactId>
+            <version>${project.version}</version>
+            <classifier>oracle-nosql</classifier>
+        </dependency>
+        <dependency>
         	<groupId>com.oracle.kv</groupId>
         	<artifactId>oracle-nosql-client</artifactId>
-        	<version>3.0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.kv</groupId>
+            <artifactId>kvstore</artifactId>
+            <scope>test</scope>
+        </dependency>        
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -53,6 +78,25 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <classifier>oracle-nosql</classifier>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>${jacoco.agent.ut.argLine} -Djava.security.manager -Djava.security.policy=${basedir}/src/test/resources/security.policy</argLine>
+                    <classpathDependencyExcludes>
+                        <classpathDependencyExcludes>com.oracle.kv:oracle-nosql-client</classpathDependencyExcludes>
+                    </classpathDependencyExcludes>
+                </configuration>
+            </plugin>        
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>src/test/resources/security.policy</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
